MAGETWO-84934: fix-bluefoot-advance-slider-alignment - Added alignment functionality to advance slider and slides to both admin and frontend.. - Added field requirements for slide form.

--- a/app/code/Gene/BlueFoot/view/adminhtml/web/css/source/stage/block/media/_slider.less
+++ b/app/code/Gene/BlueFoot/view/adminhtml/web/css/source/stage/block/media/_slider.less
@@ -25,16 +25,17 @@
   background-repeat: no-repeat;
   background-position: center center;
   background-size: cover;
+  padding: 80px 0;
 
   .pagebuilder-content {
-    margin: 80px 70px;
-    padding: 14px 16px;
+    display:inline-block;
+    padding: 24px 20px;
     width: 30%;
     color: white;
-    float: left;
 
     h3 {
-      margin-bottom: 10px;
+      margin-top: 6px;
+      margin-bottom: 6px;
       color: white;
     }
 
